--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "t": "tsc --noEmit",
     "doctor": "npx expo-doctor",
     "copyrepo": "cd ~/code && node md.js ./onyx && cat combined.md | pbcopy",
+    "copy2": "cd ~/code && node generate-docs.js ./onyx && cat model-system-docs.md | pbcopy",
     "eas-build-pre-install": "echo 'Running pre-install hook...'",
     "eas-build-post-install": "if [ \"$EAS_BUILD_PLATFORM\" = \"ios\" ]; then echo 'Running post-install hook for iOS...' && yarn fix-llama:linux; else echo 'Skipping post-install hook for non-iOS platform'; fi",
     "eas-build-on-success": "echo 'Build succeeded!'",
