Add model selector and model store (#39)
* Refactor constants.ts to include ModelConfig interface and AVAILABLE_MODELS map for scalable model management.

* Create file src/store/useModelStore.ts

* Added useModelStore import to ModelDownloader for state management.

* Create file src/screens/Chat/components/ModelSelector.tsx

* Create file src/screens/Chat/components/DownloadButton.tsx

* Create file src/screens/Chat/components/LoadingIndicator.tsx

* Create file src/screens/Chat/hooks/useModelInitialization.ts

* Create file src/screens/Chat/hooks/useModelDownload.ts

* Create file src/screens/Chat/hooks/useModelContext.ts

* Create file src/screens/Chat/hooks/useChatHandlers.ts

* Refactor ChatContainer.tsx to integrate '@flyerhq/react-native-chat-ui', remove unused imports, and add new components for model selection and downloading.

* Refactor `addMessage` to simplify message appending logic in `utils.ts`.

* Refactor `useModelContext` to improve message handling and state management.

* simpler ios script

* fix ios script

* revert

* hm

* Add useRef import and cleanup to useModelInitialization for improved resource management.

* Refactor `useModelStore.ts` to enhance readability and maintainability without altering functionality.

* Create file docs/local-models.md

* Create file src/screens/Chat/components/ModelSwitcher.tsx

* Refactor ChatContainer to improve code readability and maintainability.

* Add `SafeAreaView` to imports from `react-native-safe-area-context` in `ChatContainer.tsx` for enhanced layout handling.

* Refactor useModelStore to improve readability and maintainability.

* Add `useEffect` import in `useModelContext.ts` to manage side effects.

* Added `getCurrentModelConfig` import to `useModelContext` for enhanced model configuration management.

* Refactor useModelInitialization to streamline parameter handling and enhance readability.

* Refactor ModelSwitcher to improve state mana

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "fix-llama": "sed -i '' 's|#import <ReactCommon/RCTTurboModule.h>|#import \"RCTTurboModule.h\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h",
+    "fix-llama": "sed -i '' 's|#import <ReactCommon\\/RCTTurboModule.h>|#import \\\"RCTTurboModule.h\\\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h",
     "fix-llama:linux": "sed -i.bak 's|#import <ReactCommon/RCTTurboModule.h>|#import \"RCTTurboModule.h\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h && rm ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h.bak",
     "ios": "npx expo prebuild --platform ios --clean && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
     "web": "expo start --web",
@@ -23,6 +23,7 @@
     "t": "tsc --noEmit",
     "doctor": "npx expo-doctor",
     "copyrepo": "cd ~/code && node md.js ./onyx && cat combined.md | pbcopy",
+    "copy2": "cd ~/code && node md2.js ./onyx && cat model-system-docs.md | pbcopy",
     "eas-build-pre-install": "echo 'Running pre-install hook...'",
     "eas-build-post-install": "if [ \"$EAS_BUILD_PLATFORM\" = \"ios\" ]; then echo 'Running post-install hook for iOS...' && yarn fix-llama:linux; else echo 'Skipping post-install hook for non-iOS platform'; fi",
     "eas-build-on-success": "echo 'Build succeeded!'",
@@ -69,7 +70,6 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-blob-util": "^0.21.2",
     "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
