--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
+    "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
     "llama.rn": "^0.4.3",
     "nostr-tools": "1.13.0",
