--- a/app.json
+++ b/app.json
@@ -22,7 +22,12 @@
         "backgroundColor": "#000000"
       },
       "permissions": [
-        "RECORD_AUDIO"
+        "RECORD_AUDIO",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "RECORD_AUDIO",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
       ]
     },
     "ios": {
@@ -83,6 +88,9 @@
     "owner": "openagents",
     "runtimeVersion": {
       "policy": "sdkVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/69b52e85-13c8-439b-be19-8d2580e481fc"
     }
   }
 }
