--- a/app.json
+++ b/app.json
@@ -41,7 +41,8 @@
       },
       "infoPlist": {
         "NSSpeechRecognitionUsageDescription": "Allow Onyx to securely recognize your speech",
-        "NSMicrophoneUsageDescription": "Allow Onyx to access your microphone for voice commands"
+        "NSMicrophoneUsageDescription": "Allow Onyx to access your microphone for voice commands",
+        "NSPhotoLibraryUsageDescription": "Onyx does not need access to your photos. This permission is requested by a dependency but is not used by the app."
       }
     },
     "web": {
@@ -83,7 +84,8 @@
           "microphonePermission": "Allow Onyx to access your microphone for voice commands",
           "speechRecognitionPermission": "Allow Onyx to securely recognize your speech"
         }
-      ]
+      ],
+      "expo-speech"
     ],
     "experiments": {
       "tsconfigPaths": true
