--- a/app.json
+++ b/app.json
@@ -42,7 +42,7 @@
       "infoPlist": {
         "NSSpeechRecognitionUsageDescription": "Allow Onyx to securely recognize your speech",
         "NSMicrophoneUsageDescription": "Allow Onyx to access your microphone for voice commands",
-        "NSPhotoLibraryUsageDescription": "Onyx does not need access to your photos. This permission is requested by a dependency but is not used by the app."
+        "NSPhotoLibraryUsageDescription": "Allow Onyx to access your photos for AI analysis."
       }
     },
     "web": {
