try cover not contain

--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
       "bundleIdentifier": "com.openagents.onyx",
       "splash": {
         "image": "./assets/images/splash.png",
-        "resizeMode": "contain",
+        "resizeMode": "cover",
         "backgroundColor": "#000000"
       },
       "config": {
