New UI with native speech-to-text (#43)
* re-add useAutoUpdate

* bump version to 0.0.3

* fix splash screen maybe

* useautoupdate

* No changes detected between old and new content of eas.json.

* prod update script

* initial bottom bar

* initial voice icon

* two icons

* Refactor OnyxLayout to use View container for center alignment and responsiveness, and add additional UI properties.

* Added TextInput and state management to OnyxLayout for conditional rendering and updated styling.

* Add keyboard handling and conditional text input toggle in OnyxLayout; import additional components and theme typography.

* Refactor OnyxLayout to toggle TextInput visibility on text press.

* Refactor OnyxLayout.tsx by removing unused components and optimizing import statements for clarity and performance.

* hm

* Refactor OnyxLayout to include Modal interaction and enhance text input management.

* Refactor OnyxLayout.tsx for clarity by removing redundant code; no functional changes.

* tweaks

* Create file src/onyx/styles.ts

* Create file src/onyx/TextInputModal.tsx

* Create file src/onyx/VoiceInputModal.tsx

* Refactor OnyxLayout to use modular input modals and simplify imports, adding voice input functionality.

* Create file docs/onyx-layout.md

* Refactor VoiceInputModal to include voice recording using @react-native-voice and handle text transcription; update props and imports accordingly.

* Updated modalContainer's backgroundColor in styles.ts for enhanced visibility.

* No changes detected in OnyxLayout.tsx. Commit unnecessary.

* Refactor VoiceInputModal to use expo-speech and expo-permissions, removing react-native-voice dependency.

* Refactor VoiceInputModal to use @react-native-voice instead of expo-speech and expo-permissions for voice input handling.

* Update app.json to increment version from 0.0.3 to 0.0.4 for new release.

* npx expo install @react-native-voice/voice

* Create file docs/voic

--- a/app.json
+++ b/app.json
@@ -3,16 +3,11 @@
     "name": "Onyx",
     "slug": "onyx",
     "scheme": "onyx",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "orientation": "portrait",
     "userInterfaceStyle": "automatic",
     "icon": "./assets/images/app-icon-all.png",
     "backgroundColor": "#000000",
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "cover",
-      "backgroundColor": "#000000"
-    },
     "newArchEnabled": true,
     "jsEngine": "hermes",
     "assetBundlePatterns": [
@@ -27,15 +22,27 @@
         "backgroundColor": "#000000"
       },
       "permissions": [
-        "RECORD_AUDIO"
+        "RECORD_AUDIO",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
       ]
     },
     "ios": {
       "icon": "./assets/images/app-icon-all.png",
       "supportsTablet": true,
       "bundleIdentifier": "com.openagents.onyx",
+      "splash": {
+        "image": "./assets/images/splash.png",
+        "resizeMode": "cover",
+        "backgroundColor": "#000000"
+      },
       "config": {
         "usesNonExemptEncryption": false
+      },
+      "infoPlist": {
+        "NSSpeechRecognitionUsageDescription": "Allow Onyx to securely recognize your speech",
+        "NSMicrophoneUsageDescription": "Allow Onyx to access your microphone for voice commands",
+        "NSPhotoLibraryUsageDescription": "Allow Onyx to access your photos for AI analysis."
       }
     },
     "web": {
@@ -70,6 +77,13 @@
           "resizeMode": "contain",
           "backgroundColor": "#000000"
         }
+      ],
+      [
+        "@react-native-voice/voice",
+        {
+          "microphonePermission": "Allow Onyx to access your microphone for voice commands",
+          "speechRecognitionPermission": "Allow Onyx to securely recognize your speech"
+        }
       ]
     ],
     "experiments": {
@@ -83,6 +97,9 @@
     "owner": "openagents",
     "runtimeVersion": {
       "policy": "sdkVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/69b52e85-13c8-439b-be19-8d2580e481fc"
     }
   }
 }
