--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eas-build-on-success": "echo 'Build succeeded!'",
     "eas-build-on-error": "echo 'Build failed!'",
     "eas-build-on-complete": "echo 'Build completed!'",
-    "eas-build-on-cancel": "echo 'Build was canceled!'"
+    "eas-build-on-cancel": "echo 'Build was canceled!'",
+    "update:prod": "eas update --channel production --environment production --message"
   },
   "jest": {
     "preset": "jest-expo"
@@ -42,6 +43,7 @@
     "@flyerhq/react-native-chat-ui": "^1.4.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.15.0",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
@@ -59,11 +61,14 @@
     "expo-gl": "~15.0.2",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
+    "expo-permissions": "^14.4.0",
     "expo-secure-store": "~14.0.0",
+    "expo-speech": "~13.0.0",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
+    "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
     "llama.rn": "^0.4.3",
     "nostr-tools": "1.13.0",
