--- a/package.json
+++ b/package.json
@@ -71,17 +71,26 @@
     "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
     "llama.rn": "^0.4.3",
+    "mobx": "6.10.2",
+    "mobx-react-lite": "4.0.5",
+    "mobx-state-tree": "5.3.0",
     "nostr-tools": "1.13.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "reactotron-core-client": "^2.9.4",
+    "reactotron-mst": "^3.1.7",
+    "reactotron-react-js": "^3.3.11",
+    "reactotron-react-native": "^5.0.5",
+    "reactotron-react-native-mmkv": "^0.2.6",
     "text-encoding-polyfill": "^0.6.7",
     "three": "^0.171.0",
     "zustand": "^5.0.2"
