src to app, and log

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onyx",
-  "main": "src/app.tsx",
+  "main": "app/app.tsx",
   "version": "0.0.1",
   "license": "AGPL-3.0-only",
   "scripts": {
