Update app.json to enable new architecture and set Hermes as the JS engine for performance improvements.

--- a/app.json
+++ b/app.json
@@ -1,105 +1,1 @@
-{
-  "expo": {
-    "name": "Onyx",
-    "slug": "onyx",
-    "scheme": "onyx",
-    "version": "0.0.3",
-    "orientation": "portrait",
-    "userInterfaceStyle": "automatic",
-    "icon": "./assets/images/app-icon-all.png",
-    "backgroundColor": "#000000",
-    "newArchEnabled": true,
-    "jsEngine": "hermes",
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "android": {
-      "icon": "./assets/images/app-icon-all.png",
-      "package": "com.openagents.onyx",
-      "splash": {
-        "image": "./assets/images/splash.png",
-        "resizeMode": "contain",
-        "backgroundColor": "#000000"
-      },
-      "permissions": [
-        "RECORD_AUDIO",
-        "android.permission.RECORD_AUDIO",
-        "android.permission.MODIFY_AUDIO_SETTINGS"
-      ]
-    },
-    "ios": {
-      "icon": "./assets/images/app-icon-all.png",
-      "supportsTablet": true,
-      "bundleIdentifier": "com.openagents.onyx",
-      "splash": {
-        "image": "./assets/images/splash.png",
-        "resizeMode": "cover",
-        "backgroundColor": "#000000"
-      },
-      "config": {
-        "usesNonExemptEncryption": false
-      },
-      "infoPlist": {
-        "NSSpeechRecognitionUsageDescription": "Allow Onyx to securely recognize your speech",
-        "NSMicrophoneUsageDescription": "Allow Onyx to access your microphone for voice commands",
-        "NSPhotoLibraryUsageDescription": "Allow Onyx to access your photos for AI analysis."
-      }
-    },
-    "web": {
-      "favicon": "./assets/images/app-icon-web-favicon.png",
-      "splash": {
-        "image": "./assets/images/splash.png",
-        "resizeMode": "contain",
-        "backgroundColor": "#000000"
-      },
-      "bundler": "metro"
-    },
-    "plugins": [
-      "expo-font",
-      [
-        "expo-secure-store",
-        {
-          "configureAndroidBackup": true,
-          "faceIDPermission": "Allow Onyx to access your Face ID biometric data."
-        }
-      ],
-      [
-        "expo-av",
-        {
-          "microphonePermission": "Allow Onyx to access your microphone for voice recording."
-        }
-      ],
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#000000"
-        }
-      ],
-      [
-        "@react-native-voice/voice",
-        {
-          "microphonePermission": "Allow Onyx to access your microphone for voice commands",
-          "speechRecognitionPermission": "Allow Onyx to securely recognize your speech"
-        }
-      ]
-    ],
-    "experiments": {
-      "tsconfigPaths": true
-    },
-    "extra": {
-      "eas": {
-        "projectId": "69b52e85-13c8-439b-be19-8d2580e481fc"
-      }
-    },
-    "owner": "openagents",
-    "runtimeVersion": {
-      "policy": "sdkVersion"
-    },
-    "updates": {
-      "url": "https://u.expo.dev/69b52e85-13c8-439b-be19-8d2580e481fc"
-    }
-  }
-}
+{\n  \"expo\": {\n    \"name\": \"Onyx\",\n    \"slug\": \"onyx\",\n    \"scheme\": \"onyx\",\n    \"version\": \"0.0.3\",\n    \"orientation\": \"portrait\",\n    \"userInterfaceStyle\": \"automatic\",\n    \"icon\": \"./assets/images/app-icon-all.png\",\n    \"backgroundColor\": \"#000000\",\n    \"newArchEnabled\": true,\n    \"jsEngine\": \"hermes\",\n    \"assetBundlePatterns\": [\n      \"**/*\"\n    ],\n    \"android\": {\n      \"icon\": \"./assets/images/app-icon-all.png\",\n      \"package\": \"com.openagents.onyx\",\n      \"splash\": {\n        \"image\": \"./assets/images/splash.png\",\n        \"resizeMode\": \"contain\",\n        \"backgroundColor\": \"#000000\"\n      },\n      \"permissions\": [\n        \"RECORD_AUDIO\",\n        \"android.permission.RECORD_AUDIO\",\n        \"android.permission.MODIFY_AUDIO_SETTINGS\"\n      ],\n      \"androidXEnabled\": true,\n      \"enableJetifier\": true\n    },\n    \"ios\": {\n      \"icon\": \"./assets/images/app-icon-all.png\",\n      \"supportsTablet\": true,\n      \"bundleIdentifier\": \"com.openagents.onyx\",\n      \"splash\": {\n        \"image\": \"./assets/images/splash.png\",\n        \"resizeMode\": \"cover\",\n        \"backgroundColor\": \"#000000\"\n      },\n      \"config\": {\n        \"usesNonExemptEncryption\": false\n      },\n      \"infoPlist\": {\n        \"NSSpeechRecognitionUsageDescription\": \"Allow Onyx to securely recognize your speech\",\n        \"NSMicrophoneUsageDescription\": \"Allow Onyx to access your microphone for voice commands\",\n        \"NSPhotoLibraryUsageDescription\": \"Allow Onyx to access your photos for AI analysis.\"\n      }\n    },\n    \"web\": {\n      \"favicon\": \"./assets/images/app-icon-web-favicon.png\",\n      \"splash\": {\n        \"image\": \"./assets/images/splash.png\",\n        \"resizeMode\": \"contain\",\n        \"backgroundColor\": \"#000000\"\n      },\n      \"bundler\": \"metro\"\n    },\n    \"plugins\": [\n      \"expo-font\",\n      [\n        \"expo-secure-store\",\n        {\n          \"configureAndroidBackup\": true,\n          \"faceIDPermission\": \"Allow Onyx to access your Face ID biometric data.\"\n        }\n      ],\n      [\n        \"expo-av\",\n        {\n          \"microphonePermission\": \"Allow Onyx to access your microphone for voice recording.\"\n        }\n      ],\n      [\n        \"expo-splash-screen\",\n        {\n          \"image\": \"./assets/images/splash.png\",\n          \"imageWidth\": 200,\n          \"resizeMode\": \"contain\",\n          \"backgroundColor\": \"#000000\"\n        }\n      ],\n      [\n        \"@react-native-voice/voice\",\n        {\n          \"microphonePermission\": \"Allow Onyx to access your microphone for voice commands\",\n          \"speechRecognitionPermission\": \"Allow Onyx to securely recognize your speech\"\n        }\n      ]\n    ],\n    \"experiments\": {\n      \"tsconfigPaths\": true\n    },\n    \"extra\": {\n      \"eas\": {\n        \"projectId\": \"69b52e85-13c8-439b-be19-8d2580e481fc\"\n      }\n    },\n    \"owner\": \"openagents\",\n    \"runtimeVersion\": {\n      \"policy\": \"sdkVersion\"\n    },\n    \"updates\": {\n      \"url\": \"https://u.expo.dev/69b52e85-13c8-439b-be19-8d2580e481fc\"\n    }\n  }\n}
