--- a/package.json
+++ b/package.json
@@ -101,8 +101,10 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "@types/three": "^0.170.0",
+    "glob": "^11.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "minimatch": "^10.0.1",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
