--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "@types/three": "^0.170.0",
-    "glob": "^11.0.0",
+    "glob": "10.3.10",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "minimatch": "^10.0.1",
