--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "glob": "10.3.10",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
-    "minimatch": "^10.0.1",
+    "minimatch": "9.0.3",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
