--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "expo": "~52.0.20",
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
+    "expo-build-properties": "~0.13.1",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
     "expo-font": "~13.0.2",
