--- a/app.json
+++ b/app.json
@@ -85,7 +85,21 @@
           "speechRecognitionPermission": "Allow Onyx to securely recognize your speech"
         }
       ],
-      "expo-build-properties"
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "compileSdkVersion": 33,
+            "targetSdkVersion": 33,
+            "buildToolsVersion": "33.0.0",
+            "enableJetifier": true,
+            "enableProguardInReleaseBuilds": true,
+            "extraMavenRepos": [
+              "https://maven.google.com"
+            ]
+          }
+        }
+      ]
     ],
     "experiments": {
       "tsconfigPaths": true
