--- a/app.json
+++ b/app.json
@@ -95,7 +95,11 @@
             "enableProguardInReleaseBuilds": true,
             "extraMavenRepos": [
               "https://maven.google.com"
-            ]
+            ],
+            "manifestApplicationAttributes": {
+              "android:appComponentFactory": "androidx.core.app.CoreComponentFactory",
+              "tools:replace": "android:appComponentFactory"
+            }
           }
         }
       ]
