Updated `package.json` to fix the `fix-llama` script for iOS build compatibility.

--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "doctor": "npx expo-doctor",
     "copyrepo": "cd ~/code && node md.js ./onyx && cat combined.md | pbcopy",
     "copy2": "cd ~/code && node md2.js ./onyx && cat model-system-docs.md | pbcopy",
+    "patch-android-build": "bash ./scripts/patch-android-build.sh",
     "eas-build-pre-install": "echo 'Running pre-install hook...'",
-    "eas-build-post-install": "if [ \"$EAS_BUILD_PLATFORM\" = \"ios\" ]; then echo 'Running post-install hook for iOS...' && yarn fix-llama:linux; else echo 'Skipping post-install hook for non-iOS platform'; fi",
+    "eas-build-post-install": "if [ \"$EAS_BUILD_PLATFORM\" = \"android\" ]; then yarn patch-android-build; elif [ \"$EAS_BUILD_PLATFORM\" = \"ios\" ]; then yarn fix-llama:linux; else echo 'Skipping post-install hook for non-iOS/Android platform'; fi",
     "eas-build-on-success": "echo 'Build succeeded!'",
     "eas-build-on-error": "echo 'Build failed!'",
     "eas-build-on-complete": "echo 'Build completed!'",
