--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
+    "postinstall": "patch-package",
     "fix-llama": "sed -i '' 's|#import <ReactCommon\\/RCTTurboModule.h>|#import \\\"RCTTurboModule.h\\\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h",
     "fix-llama:linux": "sed -i.bak 's|#import <ReactCommon/RCTTurboModule.h>|#import \"RCTTurboModule.h\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h && rm ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h.bak",
     "ios": "npx expo prebuild --platform ios --clean && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
@@ -78,6 +79,8 @@
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
     "nostr-tools": "1.13.0",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
