--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "postinstall": "patch-package",
+    "precommit:hierarchy": "yarn hierarchy && git add docs/hierarchy.md",
+    "prepare": "husky install",
     "fix-llama": "sed -i '' 's|#import <ReactCommon\\/RCTTurboModule.h>|#import \\\"RCTTurboModule.h\\\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h",
     "fix-llama:linux": "sed -i.bak 's|#import <ReactCommon/RCTTurboModule.h>|#import \"RCTTurboModule.h\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h && rm ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h.bak",
     "ios": "npx expo prebuild --platform ios --clean && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
@@ -108,6 +110,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "@types/three": "^0.170.0",
     "glob": "10.3.10",
+    "husky": "^9.1.7",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "minimatch": "9.0.3",
