--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "@scure/base": "^1.1.1",
+    "apisauce": "3.0.1",
     "assert": "^1.1.1",
     "bech32": "^2.0.0",
     "bip32": "^5.0.0-rc.0",
