--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eas-build-on-complete": "echo 'Build completed!'",
     "eas-build-on-cancel": "echo 'Build was canceled!'",
     "update:prod": "eas update --channel production --environment production --message",
+    "update:android": "eas update --channel production --environment production --platform android --message",
     "hierarchy": "node scripts/generate-hierarchy.js"
   },
   "jest": {
