[v0.0.3] Revamp UI, use Groq API for voice transcriptions & chat (#48)
* Update app.json to enable new architecture and set Hermes as the JS engine for performance improvements.

* android build script

* 03

* and other

* fix app json syntax

* hierarchy script and yarn add -D glob minimatch

* minimatch

* reattempt

* downgrade glob

* downgrade minimatch

* axe expo permissions

* npx expo install expo-build-properties

* does this work

* build 34

* retry

* fix splash

* try again

* hmm

* Create file docs/roadmap.md

* dvm

* Create file docs/roadmap-brainstorming.md

* Create file scripts/patch-android-build.sh

* Updated `package.json` to fix the `fix-llama` script for iOS build compatibility.

* heh

* postinstall

* npx patch-package @react-native-voice/voice

* retry without build properties

* test

* test

* Create file app/services/groq/groq-api.types.ts

* Create file app/services/groq/groq-api.ts

* Create file app/services/groq/index.ts

* test

* testt

* works maybe

* hierarchy

* what

* test

* Create file app/services/groq/groq-chat.ts

* Create file app/models/chat/ChatActions.ts

* Add API_URL and GROQ_API_KEY optional fields to ConfigBaseProps for enhanced external API integration.

* Add `withGroqActions` import to `ChatStore.ts` for enhanced message handling.

* Refactor TextInputModal to use chatStore instead of llmStore.

* Refactor `log.ts`: Replace `value` type with `any`, introduce `createLog` function, and use optional chaining for `console.tron`.

* Updated DEFAULT_CONFIG in groq-chat.ts to use a conditional API key from Config.

* Refactor ChatActions to use updated ChatStore type import.

* Refactor TextInputModal to use TypeScript for improved type safety and maintainability.

* No changes detected in ChatActions.ts; verify if update is necessary.

* Refactor ChatStore.ts by removing withGroqActions import and related integration.

--- a/package.json
+++ b/package.json
@@ -1,36 +1,32 @@
 {
   "name": "onyx",
   "main": "app/app.tsx",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "license": "AGPL-3.0-only",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "fix-llama": "sed -i '' 's|#import <ReactCommon\\/RCTTurboModule.h>|#import \\\"RCTTurboModule.h\\\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h",
-    "fix-llama:linux": "sed -i.bak 's|#import <ReactCommon/RCTTurboModule.h>|#import \"RCTTurboModule.h\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h && rm ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h.bak",
     "ios": "npx expo prebuild --platform ios --clean && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
     "build": "yarn build:ios:prod",
+    "build:android": "yarn build:android:apk",
     "build:ios:dev": "eas build --profile development:device --platform ios --local",
     "build:ios:prod": "eas build --profile production --platform ios",
-    "build:android:prod": "eas build --profile production --platform android",
-    "build:android:apk": "eas build --profile production-apk --platform android",
+    "build:android:prod": "npx expo prebuild --platform android && eas build --profile production --platform android",
+    "build:android:apk": "npx expo prebuild --platform android && eas build --profile production-apk --platform android",
     "prebuild:clean": "npx expo prebuild --clean --platform ios",
     "submit:ios": "eas submit -p ios",
     "t": "tsc --noEmit",
     "doctor": "npx expo-doctor",
     "copyrepo": "cd ~/code && node md.js ./onyx && cat combined.md | pbcopy",
     "copy2": "cd ~/code && node md2.js ./onyx && cat model-system-docs.md | pbcopy",
-    "eas-build-pre-install": "echo 'Running pre-install hook...'",
-    "eas-build-post-install": "if [ \"$EAS_BUILD_PLATFORM\" = \"ios\" ]; then echo 'Running post-install hook for iOS...' && yarn fix-llama:linux; else echo 'Skipping post-install hook for non-iOS platform'; fi",
-    "eas-build-on-success": "echo 'Build succeeded!'",
-    "eas-build-on-error": "echo 'Build failed!'",
-    "eas-build-on-complete": "echo 'Build completed!'",
-    "eas-build-on-cancel": "echo 'Build was canceled!'",
-    "update:prod": "eas update --channel production --environment production --message"
+    "update:both": "eas update --channel production --environment production --message",
+    "update:ios": "eas update --channel production --environment production --platform ios --message",
+    "update:android": "eas update --channel production-apk --environment production --platform android --message",
+    "hierarchy": "node scripts/generate-hierarchy.js"
   },
   "jest": {
     "preset": "jest-expo"
@@ -38,16 +34,17 @@
   "dependencies": {
     "@breeztech/react-native-breez-sdk-liquid": "^0.5.1",
     "@expo-google-fonts/jetbrains-mono": "^0.2.3",
+    "@expo/config-plugins": "~9.0.0",
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@flyerhq/react-native-chat-ui": "^1.4.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.15.0",
-    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "@scure/base": "^1.1.1",
+    "apisauce": "3.0.1",
     "assert": "^1.1.1",
     "bech32": "^2.0.0",
     "bip32": "^5.0.0-rc.0",
@@ -55,13 +52,13 @@
     "expo": "~52.0.20",
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
+    "expo-build-properties": "~0.13.1",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
     "expo-font": "~13.0.2",
     "expo-gl": "~15.0.2",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
-    "expo-permissions": "^14.4.0",
     "expo-secure-store": "~14.0.0",
     "expo-speech": "~13.0.0",
     "expo-splash-screen": "~0.29.18",
@@ -75,6 +72,8 @@
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
     "nostr-tools": "1.13.0",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
@@ -101,9 +100,12 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "@types/three": "^0.170.0",
+    "glob": "10.3.10",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "minimatch": "9.0.3",
     "react-test-renderer": "18.3.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "private": true,
