--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
       "package": "com.openagents.onyx",
       "splash": {
         "image": "./assets/images/splash.png",
-        "resizeMode": "contain",
+        "resizeMode": "cover",
         "backgroundColor": "#000000"
       },
       "permissions": [
@@ -73,16 +73,8 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/splash.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
+          "resizeMode": "cover",
           "backgroundColor": "#000000"
-        }
-      ],
-      [
-        "@react-native-voice/voice",
-        {
-          "microphonePermission": "Allow Onyx to access your microphone for voice commands",
-          "speechRecognitionPermission": "Allow Onyx to securely recognize your speech"
         }
       ]
     ],
