Updated tsconfig.json to support ESNext modules and node resolution, enabling synthetic default imports.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
     "strict": true,
     "paths": {
       "@/*": ["./app/*"]
-    }
+    },
+    "module": "esnext",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true
   },
   "include": ["**/*.ts", "**/*.tsx"]
 }
