--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@flyerhq/react-native-chat-ui": "^1.4.3",
+    "@google/generative-ai": "^0.21.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
