axe llamarn stuff and llmstore for now

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "ios": "npx expo prebuild --platform ios --clean && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
+    "ios": "npx expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
@@ -68,7 +68,6 @@
     "expo-system-ui": "~4.0.6",
     "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
-    "llama.rn": "^0.4.3",
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
