--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "bech32": "^2.0.0",
     "bip32": "^5.0.0-rc.0",
     "bip39": "3.1.0",
+    "buffer": "^6.0.3",
     "expo": "~52.0.20",
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
