--- a/eas.json
+++ b/eas.json
@@ -65,14 +65,14 @@
         "ENVIRONMENT": "production"
       },
       "environment": "production",
-      "channel": "production"
+      "channel": "v0.0.4"
     },
     "production-apk": {
       "extends": "production",
       "android": {
         "buildType": "apk"
       },
-      "channel": "production-apk"
+      "channel": "v0.0.4-apk"
     }
   },
   "submit": {
