--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "doctor": "npx expo-doctor",
     "copyrepo": "cd ~/code && node md.js ./onyx && cat combined.md | pbcopy",
     "copy2": "cd ~/code && node md2.js ./onyx && cat model-system-docs.md | pbcopy",
-    "update:both": "eas update --channel production --environment production --message",
-    "update:ios": "eas update --channel production --environment production --platform ios --message",
-    "update:android": "eas update --channel production-apk --environment production --platform android --message",
+    "update:both": "eas update --channel v0.0.4 --environment production --message",
+    "update:ios": "eas update --channel v0.0.4 --environment production --platform ios --message",
+    "update:android": "eas update --channel v0.0.4 -environment production --platform android --message",
     "hierarchy": "node scripts/generate-hierarchy.js"
   },
   "jest": {
