--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "onyx",
   "main": "app/app.tsx",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "license": "AGPL-3.0-only",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "ios": "npx expo prebuild --platform ios --clean && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
+    "ios": "npx expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
@@ -23,9 +23,9 @@
     "doctor": "npx expo-doctor",
     "copyrepo": "cd ~/code && node md.js ./onyx && cat combined.md | pbcopy",
     "copy2": "cd ~/code && node md2.js ./onyx && cat model-system-docs.md | pbcopy",
-    "update:both": "eas update --channel production --environment production --message",
-    "update:ios": "eas update --channel production --environment production --platform ios --message",
-    "update:android": "eas update --channel production-apk --environment production --platform android --message",
+    "update:both": "eas update --channel v0.0.4 --environment production --message",
+    "update:ios": "eas update --channel v0.0.4 --environment production --platform ios --message",
+    "update:android": "eas update --channel v0.0.4 -environment production --platform android --message",
     "hierarchy": "node scripts/generate-hierarchy.js"
   },
   "jest": {
@@ -38,6 +38,7 @@
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@flyerhq/react-native-chat-ui": "^1.4.3",
+    "@google/generative-ai": "^0.21.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
@@ -49,6 +50,7 @@
     "bech32": "^2.0.0",
     "bip32": "^5.0.0-rc.0",
     "bip39": "3.1.0",
+    "buffer": "^6.0.3",
     "expo": "~52.0.20",
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
@@ -67,7 +69,6 @@
     "expo-system-ui": "~4.0.6",
     "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
-    "llama.rn": "^0.4.3",
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
@@ -79,6 +80,7 @@
     "react-native": "0.76.5",
     "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
