--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "yarn build:ios:prod",
     "build:android": "yarn build:android:apk",
     "build:ios:dev": "eas build --profile development:device --platform ios --local",
-    "build:ios:prod": "eas build --profile production --platform ios",
+    "build:ios:prod": "EXPO_NO_KEYCHAIN=1 eas build --profile production --platform ios",
     "build:android:prod": "npx expo prebuild --platform android && eas build --profile production --platform android",
     "build:android:apk": "npx expo prebuild --platform android && eas build --profile production-apk --platform android",
     "prebuild:clean": "npx expo prebuild --clean --platform ios",
