--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-document-picker": "^9.3.1",
+    "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^3.2.0",
